# flask-scaffold-clean-arch

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-run-prod.sh  docker-run-tests-and-lint.sh  mypy.ini  pyproject.toml  pytest.ini
app/: config.py  containers.py  main.py
app/application/: exceptions.py
app/application/dtos/: client_dto.py
app/application/services/: client_service.py  protocols.py
app/infrastructure/models/: base_model.py  client.py
app/infrastructure/repositories/: client_repository.py
app/interfaces/controllers/: client_controller.py  health_controller.py
app/utils/: json_body.py  logging.py
tests/: conftest.py  test_e2e_client.py
